[tool.poetry]
name = "bva"
version = "0.1.0"
description = "A simple utility API for Betania Vigeland"
authors = ["Andreas Bergem <bergem.andreas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.1"
requests = "^2.27"
gunicorn = "^20.1"
google-api-python-client = "^2.43"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
